  to the EmuShell instead of booting the GEM by pressing a key. (joy)

14. Aug. 2002
- desk/icons - removed unnecessary 48x24 icons, added sed scripts to help edit
  icons (LVL)
- desk/desk_rsc.c - menu items are automatically adjusted to the right size
  after translation; I don't think this hack would work in the general case
  but for the current desktop it works fine (no sub-menus, icons, ...) (LVL)

16. Aug. 2002
- vdi/gsxasm1.S - fixed bug in CLC_FLIT (no regs was saved) (MAD)
- vdi/gsxasm1.S - also needed reg-save wrapper added for vec_len (MAD)

17. Aug. 2002
- vdi/monout.c - smul_div now in C (part. from fVDI) (MAD)
               - pline optimized (from fVDI) (MAD)
               - vec_len implemented in C (MAD)

18. Aug. 2002
- vdi/text.c - trnsfont implemented in C (MAD)

20. Aug. 2002
- vdi/vdimain.c - precalculated shift offset shft_off for concat (MAD)
- Makefile, include/config.h, country.mk, bios/country.c - changed the way
  UNIQUE country EmuTOS are built. Now make unique 192 and 256k work for 
  all languages (e.g. make allbin; rm obj/*.o; make all192) but there is
  some redundancy as I can't figure yet how to avoid duplication between
  country.mk and country.c (LVL)
- tools/bug.c - removed indent warning (LVL)
- include/version.c - set version to 0.5 (LVL)
- bios/clock.c - disabled nvram code for TOS1 192k ROMS (LVL)
- bios/bios.c bios/machine.[ch] bios/startup.S - int native_features 
  renamed to int has_natfeats (LVL)
- bios/initinfo.c - changed wait time from 5 to 2 sec (MAD)

21. Aug. 2002
- doc/announce.txt - updated for release 0.5 (MAD)

27. Aug. 2002
- Makefile - replaced "-O2" by "-Os" for smaller size (MAD)

01. Sep. 2002
- doc/status - updated a bit (MAD)

03. Sep. 2002
- bdos/bdosmain.c - Removed unused Setvec/Getvec functions. (THH)
- vdi/monout.c - abline() in C part. implemented (commented out) (MAD)

05. Sep. 2002
- vdi/monout.c - abline() in C compl. implemented (MAD)